# paper_hunter

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.py  scraper.py  venues.json
.github/workflows/: dependency-check.yml
.streamlit/: config.toml
config/: presets.example.json  venues.example.json  venues.json
paper_hunter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: __init__.py
src/core/: __init__.py  models.py  scraper.py  search.py  venue_manager.py
src/ui/: __init__.py  app.py  components.py  styles.py
tests/: test_search.py  test_venue_manager.py
